# tramtrix

./: README.md  pyproject.toml
src/tramtrix/: awtrix.py  config.py  main.py  ojp.py  traffic_light.py
tests/: test_ojp.py  test_ojp_integration.py  test_traffic_light.py
